feat: add change item checked status endpoint
