# src/routes/shoppingListRoutes.ts
@@ -4,6 +4,7 @@ import {
   createShoppingList,
   deleteShoppingList,
   getAllShoppingList,
+  updateItemCheckedStatus,
   updateShoppingList,
 } from "../controllers/shoppingListController";
 
@@ -13,6 +14,7 @@ router.get("/shopping-lists", getAllShoppingList);
 router.post("/shopping-lists", createShoppingList);
 router.delete("/shopping-lists/:id", deleteShoppingList);
 router.put("/shopping-lists/:id", updateShoppingList);
-router.patch("/shopping-lists/:id", clearShoppingList);
+router.put("/shopping-lists/:id/clear-list", clearShoppingList);
+router.put("/shopping-lists/:id/check-status", updateItemCheckedStatus);
 
 export default router;
